# NaviSafe-HOH

./: desktop.ini  next.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/blockchain-demo/: page.tsx
components/: ai-anomaly-system.tsx  anonymous-reporting-panel.tsx  authority-dashboard.tsx  authority-login.tsx  authority-map-component.tsx  blockchain-simulator.tsx  blockchain-verification.tsx  confirmation-screen.tsx  deployment-guide.tsx  digital-id.tsx  emergency-panel.tsx  enhanced-map-component.tsx  gamification-panel.tsx  heatmap-visualization.tsx  location-sharing-panel.tsx  map-component.tsx  real-time-analytics.tsx  safety-dashboard.tsx  theme-toggle.tsx  trip-details-form.tsx  user-info-form.tsx  virtual-guardian-chat.tsx  welcome-screen.tsx
hooks/: use-blockchain-transaction.ts  use-gps-tracking.ts  use-reverse-geocoding.ts  use-solana-wallet.ts
lib/: socket.ts  solana-service.ts
solana-contract/: Anchor.toml  Cargo.toml  README.md  package.json
solana-contract/src/: lib.rs
solana-contract/tests/: navisafe-tourist-registry.ts
