[package]
name = "navisafe-tourist-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
borsh = "0.10.3"
sha2 = "0.10.6"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
